namespace DriverAndVehicleLicenseDepartment;

public class LicenseTypes {}