namespace DriverAndVehicleLicenseDepartment;

public class Requests {}